<resources>
    <string name="app_name">Shows</string>
    <string name="login_title">Login</string>
    <string name="login_description">In order to continue please log in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="empty_show_list">Your shows are not showing. Get it?</string>
    <string name="btn_write_review">Write a Review</string>
    <string name="list_reviews_empty">No reviews yet</string>
    <string name="reviews_title">Reviews</string>
    <string name="reviews_info">%d REVIEWS, %.2f AVERAGE</string>
    <string name="log_out">Logout</string>
    <string name="review_text">Comment</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="registration_title">Register</string>
    <string name="repeat_password">Repeat password</string>
</resources>