<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_write_review"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/roboto"/>

    <RatingBar
        android:id="@+id/reviewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:isIndicator="false"
        style="@style/Base.Widget.AppCompat.RatingBar.Indicator.PurpleStars"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.PurpleOutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reviewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review_text"
            android:textColor="@color/black"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:enabled="false"
        style="@style/Material.PurpleRoundedButton"
        android:text="@string/submit"/>
</LinearLayout>