<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.Light">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBar">
            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/black"
                app:title="Title"
                >

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/showImage"
                android:layout_width="341dp"
                android:layout_height="340dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                tools:src="@drawable/stranger_things"/>

            <TextView
                android:id="@+id/showGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:fontFamily="@font/roboto"
                tools:text="Genre"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                app:dividerColor="#C7B1F6"/>
            <TextView
                android:id="@+id/showDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:fontFamily="@font/roboto"
                tools:text="Description"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                app:dividerColor="#C7B1F6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_title"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_margin="24dp"/>

            <TextView
                android:id="@+id/reviewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_info"
                android:layout_marginHorizontal="24dp"/>

            <RatingBar
                android:id="@+id/reviewInfoRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:progressTint="@color/purple_500"
                style="@style/Widget.AppCompat.RatingBar.Indicator"/>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <TextView
                android:id="@+id/reviewsEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"
                android:text="@string/list_reviews_empty"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:backgroundTint="@color/purple_500"
                android:text="@string/btn_write_review"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>